--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-<title>Thiha's Personal Webpage</title>
+<title>My Website</title>
 <style>
 html{
 	height: 100%;
@@ -78,9 +78,9 @@ color: rgb(207, 0, 169);
 </style>
 </head>
 <body>
-	<h2 class="headings1 centerImg">Welcome to Thiha's Personal Website!</h2>
+	<h2 class="headings1 centerImg">Welcome to My Personal Website!</h2>
 
-	<p class="bloc">Salutations. Welcome to my webpage. Here, I will post any upcoming projects/features that I am working on. I will also attempt to update this page as much as possible, fingers crossed. (I may be late with some updates, so please be patient with me.) :). </p>
+	<p class="bloc">Salutations. Welcome to my webpage. Here, I will post any upcoming projects/features that I am working on. I will also attempt to update this page as much as possible, fingers crossed. (I may be late with some updates, so please be patient with me.) </p>
 
 	<p align="center" style="padding: 25px;"><img src="images/waving-bear.gif" alt="Hello!" style="float:center;width:500px;height:500px">
 	</p>
