--- a/musicpage/musicpage.html
+++ b/musicpage/musicpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Thiha's Music Projects </title>
+<title>Music Projects </title>
 <style>
 body{
 	background-image: url(images/notes.jpg);
