--- a/musicpage/musicpage.html
+++ b/musicpage/musicpage.html
@@ -50,7 +50,7 @@ margin-right: auto;
 </head>
 <body>
 <div class="center bloc">
-	<h1 align="center" style="font-family: Blackbird, helvetica, arial;font-size: 60px; padding: 25px">Welcome to Thiha's Music Projects Page! </h1>
+	<h1 align="center" style="font-family: Blackbird, helvetica, arial;font-size: 60px; padding: 25px">Welcome to My Music Projects Page! </h1>
 	<p align="center"> Here, you will find my completed audacity projects, sneak-peaks, and some behind-the-scenes content regarding the overall process. Of course, you will be able to listen to them, and some, I presume (as soon as I figure out how to add download compatibility to the page), will be downloadable. 
 </p>
 
