--- a/musicpage/musicpage.html
+++ b/musicpage/musicpage.html
@@ -91,7 +91,7 @@ margin-right: auto;
 	
 <p align="left"> As long as I have the time and motivation to work on projects, I will keep this page updated. As I mentioned in the homepage, I might be late with some updates because of college/life/other factors you're possibly theorizing about, so please have some patience. <br/> With that being said...enjoy the projects!</p>
 
-<p align="center" style="color: red;">	&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-Thiha S.</p>
+<p align="center" style="color: red;">	&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-T.S.</p>
 <hr>
 
 <h1 align="center" id="projects" style="font-family: Blackbird, helvetica, arial;font-size: 60px; padding: 25px"> Projects </h1>
