Added Pop Punk Medley #1 and July/Seaway Mashup

--- a/musicpage/musicpage.html
+++ b/musicpage/musicpage.html
@@ -62,8 +62,13 @@ margin-right: auto;
 	<li><a href="#introduction">Information</a></li>
 	<li><a href="#projects">Projects</a>
 			<ul>
+
 		<li><a href="#revforevernow">Revolution/Forever Now Mashup </a></li>	
+
 		<li><a href="#motivationweight">Motivation/Featherweight Mashup </a></li>
+
+		<li><a href="#poppunkmedley1">Pop Punk Medley #1</a>			</li>
+		<li><a href="#whatweslamupfor"> What We Signed Up For/Slam Mashup </a></li>
 		</ul>
 	</li>
 </ol>
@@ -91,13 +96,14 @@ margin-right: auto;
 	
 <p align="left"> As long as I have the time and motivation to work on projects, I will keep this page updated. As I mentioned in the homepage, I might be late with some updates because of college/life/other factors you're possibly theorizing about, so please have some patience. <br/> With that being said...enjoy the projects!</p>
 
-<p align="center" style="color: red;">	&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-T.S.</p>
+<p align="center" style="color: red;">	&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;-Thiha S.</p>
 <hr>
 
 <h1 align="center" id="projects" style="font-family: Blackbird, helvetica, arial;font-size: 60px; padding: 25px"> Projects </h1>
 
 <h1 id="revforevernow" align="left" style="font-family: Blackbird, helvetica, arial;font-size: 45px; padding-left: 25px;"> Revolution Forever Now</h1>
 <p align="left">Description: a mashup of Pennywise's Revolution and Green Day's Forever Now.
+<p>Added: 7/15/2020</p>
 <video class="center" height="100%" width="100%" controls>
 <source src="audio/revforevernow.mp4" type="video/mp4">
 </video>
@@ -105,10 +111,28 @@ margin-right: auto;
 
 <h1 id="motivationweight" align="left" style="font-family: Blackbird, helvetica, arial; font-size: 45px;padding-left: 25px;"> Motivationweight </h1>
 <p align="left"> Description: a mashup of Sum 41's Motivation and WSTR's Featherweight.
+<p>Added: 7/16/2020</p>
 <video class="center" height="100%" width="100%" controls>
 <source src="audio/motivationweight.mp4" type="video/mp4">
 </video>
 </p>
+
+<h1 id="poppunkmedley1" align="left" style="font-family: Blackbird, helvetica, arial; font-size: 45px; padding-left: 25px;"> Pop Punk Medley #1 </h1>
+<p align="left"> Description: a medley consisting of numerous pop punk songs throughout the years...all songs used are titled appropriately in their respective sections.
+<p>Added: 7/16/2020</p>
+<video class="center" height="100%" width="100%" controls>
+<source src="audio/poppunk1.mp4" type="video/mp4">
+</video>
+</p>
+
+<h1 id="whatweslamupfor" align="left" style="font-family: Blackbird, helvetica, arial; font-size: 45px; padding-left: 25px;"> What We Slam Up For</h1>
+<p align="left"> Description: a mashup of Seaway's Slam and July's What We Sign Up For.
+<p>Added: 7/16/2020 | Compiled: 7/16/2020</p>
+<video class="center" height="100%" width="100%" controls>
+<source src="audio/whatweslamupfor.mp4" type="video/mp4">
+</video>
+</p>
+
 </div>
 </body>
 </html>
