Added Art Projects page

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ color: rgb(207, 0, 169);
 	<div class="centerImg menuTab">
 	<p align="center" style="color: white;font-family: Broken, arial, helvetica; font-size: 60px;position: relative; top: 200;z-index: 2;">Programming</p><img src="images/html.jpg" alt="" class="centerImg" style="transform: scale(1,0.85);position: relative; top: -100; margin-bottom: 25px;">
 
-	<p align="center" style="color: white; font-family: Broken, arial, helvetica; font-size: 60px; position: relative; top: -2; z-index: 2;">Art</p><img src="images/paint.jpg" alt="" class="centerImg" style="position: relative; top: -300; margin-bottom: 25px;">
+	<a href="artpage/artpage.html" style="text-decoration: none;"><p align="center" style="color: white; font-family: Broken, arial, helvetica; font-size: 60px; position: relative; top: -175; z-index: 2;"><p align="center" style="color: white; font-family: Broken, arial, helvetica; font-size: 60px; position: relative; top: -2; z-index: 2;">Art</p><img src="images/paint.jpg" alt="" class="centerImg" style="position: relative; top: -300; margin-bottom: 25px;">
  	
 	<a href="musicpage/musicpage.html" style="text-decoration: none;"><p align="center" style="color: white; font-family: Broken, arial, helvetica; font-size: 60px; position: relative; top: -175; z-index: 2;">Music</p><img src="images/music.jpg" alt="" class="centerImg" style="position: relative; top: -465; margin-bottom: 25px;"></a>
 
