--- a/artpage/artpage.html
+++ b/artpage/artpage.html
@@ -109,6 +109,6 @@ margin-right: auto;
 <h2 align="left" id="christmasblues"> (Comic) Christmas Blues </h2>
 <p>Description: Christmas ain't for everyone. The artist and the cat are alone in their thoughts, but at least they have each other.</p>
 <p>Date Published: 7/19/20</p>
-<img class=centerImg art" style="border: 36px solid rgba(237, 205, 64, 0.5);" src="images/christmasblues.jpg" alt="">	
+<img class=centerImg art" style="border: 36px solid rgba(237, 205, 64, 0.5);" src="images/projects/christmasblues.jpg" alt="">	
 	</div>
 </body></html>
