--- a/artpage/artpage.html
+++ b/artpage/artpage.html
@@ -71,6 +71,7 @@ margin-right: auto;
 </style>
 </head>
 <body>
+	<img src="images/divbloc.jpg" alt="" style="opacity: 0.0; width: 0%; height: 0%;">
 	<div class="bloc centerImg">
 		<h1 align="center">Welcome to My Arts Project Page!</h1>
 
